crates/lexer/src/tests/snapshots/semi_block.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 171
expression: "(test[1], tokens)"
---
- "{ a }"
- Ok:
    - tt: OpenBrace
      line: 1
      column: 1
    - tt:
        Ident: a
      line: 1
      column: 3
    - tt: CloseBrace
      line: 1
      column: 5
    - tt:
        Semicolon: true
      line: 1
      column: 6

