crates/lexer/src/tests/snapshots/semi_keyword_2.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 172
expression: "(test[1], tokens)"
---
- fn
- Ok:
    - tt: Fn
      line: 1
      column: 1

