crates/lexer/src/tests/snapshots/semi_let.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 171
expression: "(test[1], tokens)"
---
- "let a: int"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: a
      line: 1
      column: 5
    - tt: Colon
      line: 1
      column: 6
    - tt:
        Ident: int
      line: 1
      column: 8
    - tt:
        Semicolon: true
      line: 1
      column: 9

