crates/lexer/src/tests/snapshots/semi_num.snap
---
source: crates/lexer/src/tests.rs
assertion_line: 172
expression: "(test[1], tokens)"
---
- "1"
- Ok:
    - tt:
        Num: "1"
      line: 1
      column: 1
    - tt:
        Semicolon: true
      line: 1
      column: 2

